# zk-hash-converter

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: audit.yaml  build.yaml  main.yaml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/methods/: Cargo.toml  interface.rs
core/methods/guest/: Cargo.toml
core/methods/guest/src/: main.rs
core/src/: lib.rs
interface/: interface.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
nix/: wasm-bindgen-cli.nix
scripts/: bench.sh  generate-hash-proof-for-file.sh  mem.sh
web-verifier/: Cargo.toml  Justfile  journal-renderer.json
web-verifier/src/: lib.rs
