[workspace]
members = [
    "cli",
    "core",
    "methods"
]

[workspace.dependencies.zk-hash-converter-core]
path = "./core"

[workspace.dependencies.zk-hash-converter-methods]
path = "./methods"

[workspace.dependencies]
anyhow = "1.0"
risc0-build = { git = "https://github.com/risc0/risc0.git", branch = "main" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "main" }
serde = "1.0"
serde_json = "1.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
