[workspace]
members = [
    "cli",
    "core",
    "core/methods",
    "web-verifier",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
hex = "0.4"
risc0-build = "0.20.1"
risc0-zkvm = "0.20.1"
serde = "1.0"
serde_json = "1.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
