[package]
name = "zk-hash-converter"
version = "0.0.0"
edition = "2021"

[dependencies]
zk-hash-converter-core = { path = "../core" }

anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
hex = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
