[package]
name = "guest"
version = "0.0.0"
edition = "2021"

[workspace]

[dependencies]
blake3 = { version = "1.3", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "main",  default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }